chore: changes to classes and methods #2 (unfinished)
Need to commit, so I can pull the changes and finish the changes in the other device